--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | demoPlat2d</title>
+    <title>Unity WebGL Player | juegoGarraPelotas2d</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -16,11 +16,11 @@
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-<!--       <div id="unity-warning"> </div>
- --><!--       <div id="unity-footer">
- --><!--         <div id="unity-webgl-logo"></div>
- -->        <!-- <div id="unity-fullscreen-button"></div> -->
-        <div id="unity-build-title">demoPlat2d</div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">juegoGarraPelotas2d</div>
       </div>
     </div>
     <script>
@@ -29,8 +29,8 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-/*       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
- */      var warningBanner = document.querySelector("#unity-warning");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/constructJuego.loader.js";
+      var loaderUrl = buildUrl + "/agarraPelota.loader.js";
       var config = {
-        dataUrl: buildUrl + "/constructJuego.data",
-        frameworkUrl: buildUrl + "/constructJuego.framework.js",
-        codeUrl: buildUrl + "/constructJuego.wasm",
+        dataUrl: buildUrl + "/agarraPelota.data",
+        frameworkUrl: buildUrl + "/agarraPelota.framework.js",
+        codeUrl: buildUrl + "/agarraPelota.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "demoPlat2d",
-        productVersion: "4.0.2",
+        productName: "juegoGarraPelotas2d",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
@@ -76,7 +76,7 @@
       // the canvas DOM size and WebGL render target sizes yourself.
       // config.matchWebGLToCanvasSize = false;
 
-      /* if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
 
         var meta = document.createElement('meta');
@@ -96,34 +96,7 @@
 
         canvas.style.width = "960px";
         canvas.style.height = "600px";
-      } */
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-    // Configuración para dispositivos móviles:
-    var meta = document.createElement('meta');
-    meta.name = 'viewport';
-    meta.content = 'width=device-width, initial-scale=1.0, user-scalable=no';
-    document.getElementsByTagName('head')[0].appendChild(meta);
-
-    container.className = "unity-mobile";
-    canvas.className = "unity-mobile";
-
-    // Calcula dimensiones basadas en el aspect ratio vertical:
-    var aspectRatio = 760 / 960; // Aspect ratio del canvas vertical
-    var width = window.innerWidth;
-    var height = width / aspectRatio;
-    if (height > window.innerHeight) {
-        height = window.innerHeight;
-        width = height * aspectRatio;
-    }
-    canvas.style.width = width + "px";
-    canvas.style.height = height + "px";
-} else {
-    // Configuración para escritorio con aspecto vertical:
-    canvas.style.width = "760px";
-    canvas.style.height = "960px";
-}
-
-
+      }
 
       loadingBar.style.display = "block";
 
@@ -134,9 +107,9 @@
           progressBarFull.style.width = 100 * progress + "%";
               }).then((unityInstance) => {
                 loadingBar.style.display = "none";
-                /* fullscreenButton.onclick = () => {
+                fullscreenButton.onclick = () => {
                   unityInstance.SetFullscreen(1);
-                }; */
+                };
               }).catch((message) => {
                 alert(message);
               });
