--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  --><!--       <div id="unity-footer">
  --><!--         <div id="unity-webgl-logo"></div>
  -->        <!-- <div id="unity-fullscreen-button"></div> -->
-        <div id="unity-build-title">demoPlat2d</div>
+        <div id="unity-build-title"></div>
       </div>
     </div>
     <script>
